hphp/hack/test/decl/ctx_const_lower_bound.php.typecheck.exp
File "ctx_const_lower_bound.php", line 4, characters 24-39:
Constraints on ctx constants are not allowed (Parsing[1002])
File "ctx_const_lower_bound.php", line 8, characters 24-39:
Constraints on ctx constants are not allowed (Parsing[1002])
