hphp/hack/test/decl/ctx_const_lower_bound.php
<?hh

abstract class C {
  abstract const ctx C super [defaults];
}

abstract class D {
  abstract const ctx C super [defaults] = [];
}
